# u-safe

./: .framework-install  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: .eval-plan-status.json  .review-status.json  README.md  WORKFLOW.md  settings.json  settings.json.backup-20260316-211134  settings.json.backup-20260318-143838  settings.json.backup-20260318-152746  settings.json.backup-20260318-153545
.claude/guides/: .ai-guides-version  HARDCODING_POLICY.md  README.md
.claude/pillars/: CHEATSHEET.md  PILLAR_INTERDEPENDENCIES.md  README.md  STRUCTURE.md
.claude/profiles/: nextjs-aws.json  tauri-aws.json  tauri.json
.claude/rules/: INDEX.md  QUICK_REFERENCE.md  README.md
.claude/skills/: ARCHITECTURE.md  COMPLIANCE_ACTION_PLAN.md  IMPLEMENTATION_GUIDE.md  MIGRATION_GUIDE.md  PYTHON_GUIDE.md  PYTHON_GUIDE.md.backup-2026-03-15-125843  README.md  README.md.backup-2026-03-15-125843  SKILL_TEMPLATE.md  WORKFLOW_PATTERNS.md
.claude/workflow/: CHECKLIST_BY_WORKFLOW.md  ISSUE_COMPLETION_CHECKLIST.md  MAIN.md  Phase-A-Documentation.md  Phase-B-Planning.md  Phase-C-Development.md  Phase-D-Release.md  architecture-core.md  feature-development.md  quick-reference.md
.github/workflows/: architecture-check.yml
app/.claude/: .review-status.json
app/src/: router.tsx  tsconfig.app.json
docs/: DOCUMENTATION_MANUAL.md  README.html  README.md  project-profile.md
docs/ADRs/: 003-technical-stack.md  006-unified-data-directory.md  README.md  TEMPLATE.md
docs/adr/: 0001-record-architecture-decisions.md  0003-encryption-strategy.md  001-design-token-system-css-variables.md  004-encryption-strategy.md  README.md
docs/ai-guides/: README.md
docs/arch/: API.md  ARCHITECTURE.md  Database_Schema.md
docs/design/: UI_UX_DESIGN.md
docs/dev/: CONTRIBUTING.md  SETUP.md
docs/prd/: PRD.md
docs/product/: PRD.md  roadmap.md
scripts/: check-architecture.ts  install-hooks.sh
src/: App.css  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.claude/: .review-status.json
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: lib.rs  logging.rs  main.rs  system_info.rs  theme.rs  usb_detection.rs
src-tauri/src/commands/: auth.rs  file_encryption.rs  file_operations.rs  file_scanner.rs  logging.rs  mod.rs  password_reset.rs  tag_management.rs  tag_management_temp.rs
src-tauri/src/crypto/: aes.rs  error.rs  kdf.rs  key.rs  keystore.rs  mod.rs  password.rs  random.rs  stream.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src-tauri/src/file/: mod.rs  reader.rs  temp.rs  writer.rs
src-tauri/src/models/: mod.rs  tag.rs
src-tauri/tests/: integration_test.rs
src/types/: tag.ts
(+772 files in other folders)
