[package]
name = "u-safe"
version = "0.1.0"
description = "U盘文件加密管理工具"
authors = ["U-Safe Team"]
edition = "2021"

[lib]
name = "u_safe_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.30", features = ["bundled"] }
log = "0.4"
env_logger = "0.11"

# 加密相关依赖
argon2 = "0.5"           # 密钥派生 (KDF)
aes-gcm = "0.10"         # AES-256-GCM 加密
rand = "0.8"             # 安全随机数生成
zeroize = { version = "1.7", features = ["derive"] }  # 内存清零
uuid = { version = "1.7", features = ["v4"] }  # UUID 生成（临时文件名）

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
